--- a/stories.html
+++ b/stories.html
@@ -61,7 +61,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<div class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=XFm952sxMAwAX-ldrO_&oh=2b6138de3c5eedd8934184dabfd216f1&oe=5F0377AA" alt="Сок Сельдерея Здоровье Печени" /></div>
+							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=XFm952sxMAwAX-ldrO_&oh=73ea5a807dc61e7f563d1bc562d59cd6&oe=5F076C2A" alt="Сок Сельдерея Здоровье Печени" /></div>
 							<div class="header__logo-txt">anishapo_nutrition</div>
 						</div>
 						<div class="header__title">Сок Сельдерея Здоровье Печени</div>
@@ -108,7 +108,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="rasskazhu-ka-ya-vam-o-pol-ze-zelenogo" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/102298134_1292392317818643_3835002096542030169_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=Xf4oruC103UAX8bKHlL&oh=dc78b6e1d634b422d41401c8fd761800&oe=5F03C3DB" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РАССКАЖУ-КА Я ВАМ О ПОЛЬЗЕ ЗЕЛЕНОГО">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/102298134_1292392317818643_3835002096542030169_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=Xf4oruC103UAX8bKHlL&oh=47bc924c4af2f1c7d48406c97f486496&oe=5F07B85B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РАССКАЖУ-КА Я ВАМ О ПОЛЬЗЕ ЗЕЛЕНОГО">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -128,7 +128,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="god-bez-zhirov" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101685128_756670644870301_8830249613421662623_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=DglTSaYg0hsAX-z_2cm&oh=91a98a77aca6b0958b22213c596569a2&oe=5F02A6FF" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ГОД БЕЗ ЖИРОВ.">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101685128_756670644870301_8830249613421662623_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=DglTSaYg0hsAX-z_2cm&oh=539a8018c71c0f06725a8ddaffbd17a1&oe=5F069B7F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ГОД БЕЗ ЖИРОВ.">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -136,9 +136,9 @@
 					</div>
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
-							<input id="khochu-raskryt--vam-svoy-sekretxxxxx" type="checkbox" />
+							<input id="khochu-raskryt--vam-svoix-sekretxxxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101432207_846287522564790_1033379956016755776_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=YnL59FsCb5wAX9fB3rq&oh=4ef2ca893c07ab1643bab4291364a144&oe=5F060570" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ХОЧУ РАСКРЫТЬ ВАМ СВОЙ СЕКРЕТ 🤫😎">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101432207_846287522564790_1033379956016755776_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=YnL59FsCb5wAX9fB3rq&oh=4ef2ca893c07ab1643bab4291364a144&oe=5F060570" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ХОЧУ РАСКРЫТЬ ВАМ СВОЙ СЕКРЕТ 🤫😎">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -158,7 +158,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="interval-noe-golodanie" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101172768_116859330040796_4014620460128629771_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=qvGIOKE82-4AX93xczS&oh=26cbe353b8686dc3b89dacb56bc71685&oe=5F05CCCE" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ИНТЕРВАЛЬНОЕ ГОЛОДАНИЕ.">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101172768_116859330040796_4014620460128629771_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=dW9Bgio3UuEAX_zit6m&oh=3be23593288f264b6d3f4663423d0b3a&oe=5F05CCCE" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ИНТЕРВАЛЬНОЕ ГОЛОДАНИЕ.">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -168,7 +168,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="zhizn--v-stile-detoks" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101418878_2717064335205064_1737323169181004803_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=JfsFDkPNNXkAX9t-4fp&oh=becf24a088945fbc86ecfe6002aea519&oe=5F02FA6E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЖИЗНЬ В СТИЛЕ ДЕТОКС">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101418878_2717064335205064_1737323169181004803_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=JfsFDkPNNXkAX9t-4fp&oh=a2fd988fa4a829a9cecfb85d408d498d&oe=5F06EEEE" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЖИЗНЬ В СТИЛЕ ДЕТОКС">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -188,7 +188,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="mango-yavlyaetsya-odnim" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/100967102_180178723339057_1503344869795588799_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=hfpKM93bsmoAX87qtvb&oh=df3e8b003489785e1c812579319e07ed&oe=5F034460" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Манго является одним">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/100967102_180178723339057_1503344869795588799_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=hfpKM93bsmoAX87qtvb&oh=9f195867a54fda7c6c5d6d8c98b7d3b1&oe=5F0738E0" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Манго является одним">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -198,7 +198,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="toksichnye-vrediteli-xx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101421325_245625310000068_291160102237677734_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=100&_nc_ohc=-2n_LXDkne8AX_znFPh&oh=96ed41e82ae71a985cd0615fb17a5976&oe=5F0288DF" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ТОКСИЧНЫЕ ВРЕДИТЕЛИ 🦠">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101421325_245625310000068_291160102237677734_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=100&_nc_ohc=6hPece65cwYAX9BihI-&oh=cc2aa9f8989e010700de70a22a3501bf&oe=5F067D5F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ТОКСИЧНЫЕ ВРЕДИТЕЛИ 🦠">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -218,7 +218,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="masla" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/99050802_1569651349875494_1068787266833651333_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=4LVRwv6Jr7kAX_NerDp&oh=8f1cc243a8258fdbaf68c9bb64d73693&oe=5F02B040" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МАСЛА…">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/99050802_1569651349875494_1068787266833651333_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=4LVRwv6Jr7kAX_NerDp&oh=ee6aa4af94e039082932a96a11ab9639&oe=5F06A4C0" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МАСЛА…">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -228,7 +228,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="ya-neodnokratno-stalkivayus--s-temx-chto-mnogie" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/98458367_288188905909491_779857171730809679_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=IyfYczqliToAX9CBN9u&oh=2d065d6dd134467f3c273c1714f40137&oe=5F064955" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Я неоднократно сталкиваюсь с тем, что многие">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/98458367_288188905909491_779857171730809679_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=J9l8-KTUiC8AX9QkhMM&oh=f24f792d44408e3df36fdd741e7a37f8&oe=5F064955" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Я неоднократно сталкиваюсь с тем, что многие">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -248,7 +248,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="lodochki-iz-krasnokachannoix-kapustyxxxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/97950059_1021519504910480_9202360642982216579_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=jmBg0sf3A24AX_vBG2-&oh=1f1eb0dde88166855eedf9dd3ca374b5&oe=5F030718" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЛОДОЧКИ ИЗ КРАСНОКАЧАННОЙ КАПУСТЫ 💜🌱">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/97950059_1021519504910480_9202360642982216579_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=jmBg0sf3A24AX_vBG2-&oh=c78005e465dbf32ef80c2019caff238f&oe=5F06FB98" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЛОДОЧКИ ИЗ КРАСНОКАЧАННОЙ КАПУСТЫ 💜🌱">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -258,7 +258,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="ya-tak-chasto-pokazyvayu-eto-blyudo" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/97129589_161895015306925_2989129354723762743_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=pBfNNmjVA3gAX_FtnWw&oh=f4a91c45b883f9051ea97b977e5ea3d9&oe=5F030C69" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Я так часто показываю это блюдо">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/97129589_161895015306925_2989129354723762743_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=pBfNNmjVA3gAX_FtnWw&oh=3b7285bc1244d7a60cd818b45c0ef752&oe=5F0700E9" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Я так часто показываю это блюдо">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -268,7 +268,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="ryba" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/97112106_909484476234100_6116362878228193822_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=VTswuPkXmQYAX9sUPF_&oh=e369743c225cc5202299dfffeee9a657&oe=5F0323AC" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РЫБА.">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/97112106_909484476234100_6116362878228193822_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=tY5uNEQ8wAcAX_BYtl6&oh=212200fdaad8ef942bc2bb8762d74b19&oe=5F07182C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РЫБА.">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -278,7 +278,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="zapechennaya-tsvetnaya-kapusta" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/96264436_1583796465122381_7468446220315787476_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=RROKqmmLq28AX8w38Md&oh=54e27c978e2cc54a8d46338e68cbcb7d&oe=5F038939" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЗАПЕЧЕННАЯ ЦВЕТНАЯ КАПУСТА">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/96264436_1583796465122381_7468446220315787476_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=RROKqmmLq28AX8w38Md&oh=10ed2deac1688ba4f60c47705ad98b49&oe=5F077DB9" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЗАПЕЧЕННАЯ ЦВЕТНАЯ КАПУСТА">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
