--- a/stories.html
+++ b/stories.html
@@ -61,7 +61,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<div class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=XFm952sxMAwAX-ldrO_&oh=73ea5a807dc61e7f563d1bc562d59cd6&oe=5F076C2A" alt="Сок Сельдерея Здоровье Печени" /></div>
+							<div class="header__logo-pic"><img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_ohc=9VC94lLiQLsAX_nCeDm&oh=225a072b3d35a8460dd623faed59c3a3&oe=5F076C2A" alt="Сок Сельдерея Здоровье Печени" /></div>
 							<div class="header__logo-txt">anishapo_nutrition</div>
 						</div>
 						<div class="header__title">Сок Сельдерея Здоровье Печени</div>
@@ -106,9 +106,19 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="teoretik-ili-praktik-x" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101946265_577765963155092_3121831021141741700_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=8GvtMrlL2O0AX9ThB6B&oh=6506fb74bf5c5e7feace74337b626c7e&oe=5F05324C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ТЕОРЕТИК ИЛИ ПРАКТИК ❓">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="rasskazhu-ka-ya-vam-o-pol-ze-zelenogo" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/102298134_1292392317818643_3835002096542030169_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=Xf4oruC103UAX8bKHlL&oh=47bc924c4af2f1c7d48406c97f486496&oe=5F07B85B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РАССКАЖУ-КА Я ВАМ О ПОЛЬЗЕ ЗЕЛЕНОГО">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/102298134_1292392317818643_3835002096542030169_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=MYT17pR-7EgAX-2XyG7&oh=faa001672125eb3052827554609d31dc&oe=5F07B85B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РАССКАЖУ-КА Я ВАМ О ПОЛЬЗЕ ЗЕЛЕНОГО">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -118,7 +128,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="o-chem-govorit-neperenosimost--fruktov" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101398119_318429069147662_1373205108327136407_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=TVB58iOvklUAX_JUUSo&oh=55975f3986963157535c2da26b596580&oe=5F05F862" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="О ЧЕМ ГОВОРИТ НЕПЕРЕНОСИМОСТЬ ФРУКТОВ?">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101398119_318429069147662_1373205108327136407_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=d6An19pdKtQAX9Fqr54&oh=1e2b6645a2c4e80b6d31550f8817fa24&oe=5F05F862" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="О ЧЕМ ГОВОРИТ НЕПЕРЕНОСИМОСТЬ ФРУКТОВ?">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -128,7 +138,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="god-bez-zhirov" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101685128_756670644870301_8830249613421662623_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=DglTSaYg0hsAX-z_2cm&oh=539a8018c71c0f06725a8ddaffbd17a1&oe=5F069B7F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ГОД БЕЗ ЖИРОВ.">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101685128_756670644870301_8830249613421662623_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=SNYF6MMHUpIAX-UHBsM&oh=0ace4443bdfe5ebe24ac6059c66c2324&oe=5F069B7F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ГОД БЕЗ ЖИРОВ.">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -138,7 +148,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="khochu-raskryt--vam-svoix-sekretxxxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101432207_846287522564790_1033379956016755776_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=YnL59FsCb5wAX9fB3rq&oh=4ef2ca893c07ab1643bab4291364a144&oe=5F060570" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ХОЧУ РАСКРЫТЬ ВАМ СВОЙ СЕКРЕТ 🤫😎">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101432207_846287522564790_1033379956016755776_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=2zp3WqiW5ssAX9bZwWJ&oh=48fe9b608a923448c2e187818f0826c2&oe=5F060570" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ХОЧУ РАСКРЫТЬ ВАМ СВОЙ СЕКРЕТ 🤫😎">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -168,7 +178,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="zhizn--v-stile-detoks" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101418878_2717064335205064_1737323169181004803_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=JfsFDkPNNXkAX9t-4fp&oh=a2fd988fa4a829a9cecfb85d408d498d&oe=5F06EEEE" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЖИЗНЬ В СТИЛЕ ДЕТОКС">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101418878_2717064335205064_1737323169181004803_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=G99CmRm_xXYAX8dYfZz&oh=13459e04817e2121076cc616fc355f34&oe=5F06EEEE" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЖИЗНЬ В СТИЛЕ ДЕТОКС">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -178,7 +188,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-ananasxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101526673_186631159250094_3367879356632716893_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=lUDI1bUPaHwAX9Cs34S&oh=cbc8cc3c283237c05b4fbb12f9c38cea&oe=5F0440FA" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🍍 АНАНАС 🍍">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/101526673_186631159250094_3367879356632716893_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=lUDI1bUPaHwAX9Cs34S&oh=51bb850ea75473c349a6ad389438ba34&oe=5F08357A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🍍 АНАНАС 🍍">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -208,7 +218,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="x-zhir-x-sakhar-i-drugie-variatsii" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/100089532_2790935021017406_2998935086677412144_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=MU92I3_C85EAX86mHha&oh=ab7d81d31ee3a382affa2547130dcfb9&oe=5F03EA25" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="❌ ЖИР + САХАР И ДРУГИЕ ВАРИАЦИИ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/100089532_2790935021017406_2998935086677412144_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=9GIRWnFZ4zEAX8zWMOr&oh=08733fbc2a491bb97ce80668447e5dd2&oe=5F07DEA5" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="❌ ЖИР + САХАР И ДРУГИЕ ВАРИАЦИИ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -269,16 +279,6 @@
 							<input id="ryba" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/97112106_909484476234100_6116362878228193822_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=tY5uNEQ8wAcAX_BYtl6&oh=212200fdaad8ef942bc2bb8762d74b19&oe=5F07182C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РЫБА.">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="zapechennaya-tsvetnaya-kapusta" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/96264436_1583796465122381_7468446220315787476_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=RROKqmmLq28AX8w38Md&oh=10ed2deac1688ba4f60c47705ad98b49&oe=5F077DB9" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЗАПЕЧЕННАЯ ЦВЕТНАЯ КАПУСТА">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
